deployment.yaml
apiVersion: apps/v1 #
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: simbam1/webapp
